# haskell-static-site-generator

./: .gitignore  Html.hs  Markup.hs  README.md  blog-generator.cabal  hello.hs  stack.yaml
Html/: Internal.hs
app/: Main.hs  OptParse.hs
output/: index.html
src/: HsBlog.hs
src/HsBlog/: Convert.hs  Directory.hs  Html.hs  Markup.hs
src/HsBlog/Html/: Internal.hs
