cabal-version:       2.4

name:                blog-generator
version:             0.0.0
synopsis:            Blog generator
description:         Blog generator
license:             BSD-3-Clause
author:              Vlatko Trajkov
maintainer:          trajkovvlatko@gmail.com

common common-settings
  default-language: Haskell2010
  ghc-options:
    -Wall

library
  import: common-settings
  hs-source-dirs: src
  build-depends:
      base
    , directory
    , filepath
  exposed-modules:
    HsBlog
      HsBlog.Convert
      HsBlog.Directory
      HsBlog.Html
        HsBlog.Html.Internal
      HsBlog.Markup

executable blog-generator-gen
  import: common-settings
  hs-source-dirs: app
  main-is: Main.hs
  other-modules:
    OptParse
  build-depends:
      base
    , directory
    , optparse-applicative
    , blog-generator
  ghc-options:
    -O
